fsm-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsm-ingress
  namespace: fsm
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    cert-manager.io/duration: "2160h"
    cert-manager.io/renew-before: "360h"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fullscreenmario-ds.ru
    secretName: tls-fsm-secret
  rules:
  - host: fullscreenmario-ds.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fsm-service
            port:
              number: 80
